<resources>
    <string name="app_name">Sweet Donuts</string>
    <string name="logo_content_description">Deskripsi Logo</string>
    <string name="button_text_masuk">Masuk</string>
    <string name="logo_description">Logo Aplikasi</string>
    <string name="sweet_message">Jadikan harimu lebih manis dengan memakan donat manis kami </string>
    <string name="menu_donat">Menu</string>
    <string name="coklat_content_description">Gambar donat rasa coklat</string>
    <string name="favorite_this_month">Favorit Bulan ini!!!</string>
    <string name="donat_macha">Donat Macha</string>
    <string name="harga_macha">Rp7000</string>
    <string name="macha_content_description">Gambar donat rasa matcha</string>
    <string name="donat_strawberry">Strawberry Bliss Donut</string>
    <string name="harga_strawberry">Rp10.000</string>
    <string name="strawberry_content_description">Gambar donat rasa strawberry</string>
    <string name="donat_meses">Donat Choco</string>
    <string name="harga_meses">Rp5.000</string>
    <string name="meses_content_description">Gambar donat rasa meses</string>
    <string name="donat_blueberry">Blueberry Dream</string>
    <string name="harga_blueberry">10000</string>
    <string name="bluberry_content_description">Gambar donat rasa bluberyy</string>
    <string name="isi_bluberry">Donat dengan lapisan glaze blueberry yang menggoda, dihiasi taburan crunchy berwarna ungu yang menambah tekstur dan cita rasa segar. Cocok untuk pecinta rasa manis dengan sentuhan buah yang ringan.</string>
    <string name="caramel">Caramel Crunch Bliss</string>
    <string name="harga_caramel">85000</string>
    <string name="caramel_content_description">Gambar donat rasa caramel</string>
    <string name="isi_caramel">Donat lembut berlapis glaze vanilla dengan sentuhan garis-garis karamel yang menggoda. Dihiasi dengan taburan kacang renyah yang memberikan kombinasi rasa manis dan gurih dalam setiap gigitan.</string>
    <string name="home_content_description">Beranda</string>
    <string name="profile_content_description">Profil</string>
    <string name="back_button">Back Button</string>
    <string name="back_button_content_description">Tombol Kembali</string>
    <string name="sweet_donuts">Sweet Donuts</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="user_icon_desc">Ikon Pengguna</string>
    <string name="user_name">Username</string>
    <string name="data_diri">Data Diri</string>
    <string name="email">Email:</string>
    <string name="nama">Nama:</string>
    <string name="nomor_telepon">Nomor Telepon:</string>
    <string name="alamat">Alamat:</string>
    <string name="titik">.....</string>
    <string name="logo_toko">Logo Toko</string>
    <string name="store_name">Sweet Donuts</string>
    <string name="delivery_time">Kita akan tiba setelah 20 menit</string>
    <string name="prepare_money">Siapkan Uang sebanyak Rp17.000</string>
    <string name="thank_you">Terimakasih sudah berbelanja di toko kami</string>
    <string name="delivery_boy_desc">Gambar pengantar toko</string>
    <string name="contact_info">Jika pesanan belum sampai, kami akan menghubungi melalui nomor telepon anda!</string>
    <string name="profile_icon_desc">Profil</string>
    <string name="home_icon_desc">Home</string>
    <string name="back">Back</string>
    <string name="detail_product">Detail Produk</string>
    <string name="logo">Deskripsi Logo</string>
    <string name="detail_macha">Donat Macha</string>
    <string name="isi_macha">Donat lembut yang diisi dan dilapisi dengan selai matcha premium, menciptakan rasa teh hijau yang khas. Dilengkapi dengan krim putih di atasnya, memberikan perpaduan sempurna antara rasa matcha yang kaya dan kelembutan krim yang manis. Cocok untuk dinikmati kapan saja, terutama bagi pecinta matcha.</string>
    <string name="isi_strawberry">Donat ini memiliki tekstur empuk, dengan lapisan topping glaze strawberry yang berkilau dan menggoda, memberikan sentuhan rasa manis dan asam yang sempurna. Beberapa varian dihiasi dengan potongan buah strawberry segar atau taburan gula halus untuk mempercantik tampilannya. </string>
    <string name="isi_meses">Donat ini terbuat dari adonan lembut yang dipadukan dengan manisnya cokelat dan taburan meses premium. Setiap gigitan memberikan tekstur yang renyah di luar dan lembut di dalam, dengan rasa cokelat yang meleleh di mulut.</string>
    <string name="detail_harga_macha">Rp7000</string>
    <string name="detail_harga_strawberry">Rp10000</string>
    <string name="plus_button">icon plus</string>
    <string name="min_button">icon min</string>
    <string name="jumlah">0</string>
    <string name="jumlah_bayar">Rp 7000</string>
    <string name="jumlah_bayar1">Rp 10000</string>
    <string name="buy">Beli</string>
    <string name="price">Rp 0</string>
    <string name="purchasing">Pembayaran</string>
    <string name="total_pesanan">Total Pesanan: %1$d Item</string>
    <string name="total_harga">Total: Rp %1$d</string>
    <string name="biaya_layanan">Biaya Layanan: Rp 0</string>
    <string name="cod_content_description">gambar cod</string>
    <string name="metode">Metode Pembayaran</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="next">Selanjutnya</string>
    <string name="jumlah_bulat">0</string>
    <string name="jumlah_bulat2">0</string>
    <string name="save">Simpan</string>
    <string name="title_activity_detail_produk3">detail_produk3</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>