<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".purchase">

    <ImageView
        android:id="@+id/back_button4"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logoImage5"
        android:layout_width="123dp"
        android:layout_height="83dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearBayar"
        android:layout_width="352dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:background="#F7A1B3"
        android:backgroundTint="#F7A1B3"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/purchasing"
            android:textColor="#980003"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearPembayaran"
        android:layout_width="352dp"
        android:layout_height="86dp"
        android:layout_marginTop="16dp"
        android:background="#F7A1B3"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearBayar">

        <ImageView
            android:id="@+id/donutImageView6"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/macha_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/macha" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/donat_macha"
                android:textColor="#980003"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jumlahHargaBayarMacha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/jumlah_bayar"
                android:textColor="#980003"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/jumlahBeliMacha"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape2"
            android:gravity="center"
            android:text="@string/jumlah_bulat2"
            android:textColor="#4A0000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearPembayaran2"
        android:layout_width="349dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:background="#F7A1B3"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearPembayaran">

        <ImageView
            android:id="@+id/donutImageViewStrawberry"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:contentDescription="@string/strawberry_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/strawberry" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/donat_strawberry"
                android:textColor="#980003"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/jumlahHargaBayarStrawberry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/jumlah_bayar"
                android:textColor="#980003"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/jumlahBeliStrawberry"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape2"
            android:gravity="center"
            android:text="@string/jumlah_bulat"
            android:textColor="#4A0000"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalPembayaran"
        android:layout_width="312dp"
        android:layout_height="62dp"
        android:background="#F7A1B3"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545">

        <TextView
            android:id="@+id/totalPesanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/total_pesanan"
            android:textColor="#980003"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/totalPesananSemua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/total_harga"
            android:textColor="#980003"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_metodePembayaran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="320dp"
        android:fontFamily="sans-serif"
        android:text="@string/metode"
        android:textColor="#980003"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearBayar" />

    <LinearLayout
        android:id="@+id/ll_cashOnDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_metodePembayaran">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="38dp"
            android:contentDescription="@string/cod_content_description"
            android:src="@drawable/cod" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif"
            android:text="@string/cash_on_delivery"
            android:textColor="#980003"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_cashOnDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            style="@style/CustomCheckBox" />
    </LinearLayout>

    <TextView
        android:id="@+id/nexttextview"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:layout_marginBottom="96dp"
        android:background="#FF6F91"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/next"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/bottomNav3"
        android:layout_width="305dp"
        android:layout_height="55dp"
        android:layout_marginBottom="4dp"
        android:background="#FF7D91"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/home_image_view3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_content_description"
            android:src="@drawable/rumah" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/profile_image_view3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_content_description"
            android:src="@drawable/account_circle" />


        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>